// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render detailed view correctly with empty and without open button 1`] = `
<div>
  <div>
    <div
      className="page-header"
    >
      <div
        className="content-container"
      >
        <div
          className="page-header__actions"
        >
          <Link
            className="button"
            replace={false}
            to="/edit/leffe"
          >
            Edit
          </Link>
          <button
            className="button"
            id="emptyDrink"
            onClick={[Function]}
          >
            Empty
          </button>
        </div>
      </div>
    </div>
    <div
      className="content-container"
    >
      <h1>
        Leffe Ruby
      </h1>
      <ul>
        <li>
          Beer
        </li>
        <li>
          0.25
           L
        </li>
        <li>
          5
           %
        </li>
        <li>
          11.12
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`should render detailed view correctly with open and without empty button 1`] = `
<div>
  <div>
    <div
      className="page-header"
    >
      <div
        className="content-container"
      >
        <div
          className="page-header__actions"
        >
          <Link
            className="button"
            replace={false}
            to="/edit/laphroaigh"
          >
            Edit
          </Link>
          <button
            className="button"
            id="openDrink"
            onClick={[Function]}
          >
            Open
          </button>
        </div>
      </div>
    </div>
    <div
      className="content-container"
    >
      <h1>
        Laphroaig QA Cask Double Matured
      </h1>
      <ul>
        <li>
          Whisky
        </li>
        <li>
          1
           L
        </li>
        <li>
          40
           %
        </li>
        <li>
          4804
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`should render detailed view correctly without empty & open buttons 1`] = `
<div>
  <div>
    <div
      className="page-header"
    >
      <div
        className="content-container"
      >
        <div
          className="page-header__actions"
        >
          <Link
            className="button"
            replace={false}
            to="/edit/whisky"
          >
            Edit
          </Link>
        </div>
      </div>
    </div>
    <div
      className="content-container"
    >
      <h1>
        My bottle II
      </h1>
      <ul>
        <li>
          Whisky
        </li>
        <li>
          0.7
           L
        </li>
        <li>
          42
           %
        </li>
        <li>
          12
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`should render detailed view with incorrect id correctly 1`] = `
<div>
  <h1
    className="page-header__title"
  >
    Record with 
    <span>
      id:
      123
    </span>
     not found!
  </h1>
</div>
`;
